--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Button from '../components/Button.astro';
 ---
-<MainLayout title="Titel">
+<MainLayout title="Digital Cleanup Day">
 	<article>
 		<p>Index indhold</p>
 	</article>
