--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,13 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
 import Button from '../components/Button.astro';
+import { Image } from 'astro:assets';
+import thumbsup from '../assets/images/dcd.png'; 
+
 ---
 <MainLayout title="Digital Cleanup Day">
 	<article>
-		<p>Index indhold</p>
+		<p>Digital Cleanup Day</p>
+		<Image src={thumbsup} alt="dcd"></Image>
 	</article>
 </MainLayout>
