--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
+import { Image } from "astro:assets";
+import hero from "../assets/images/hero.png";
 ---
-<div>
-Header
-</div>
+
+    <Image src={hero} alt="dcd" class="w-32" />
