--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,15 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Button from '../components/Button.astro';
 import { Image } from 'astro:assets';
-import thumbsup from '../assets/images/dcd.png'; 
+import digitalcleanupday from '../assets/images/dcd.png'; 
 
 ---
 <MainLayout title="Digital Cleanup Day">
 	<article>
-		<p>Digital Cleanup Day</p>
-		<Image src={thumbsup} alt="dcd"></Image>
+		<section>
+			<h2>Hvad er digitalt skrald?</h2>
+			<Image src={digitalcleanupday} alt="dcd" class="h-80 w-80"></Image>
+		</section>
 	</article>
+	</body>
 </MainLayout>
