css costum props

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,9 @@
 ---
 import { Image } from "astro:assets";
-import hero from "../assets/images/hero.png";
+import Navbar from "../components/Navbar.astro";
+import logo from "../assets/images/logo.svg";
 ---
-
-    <Image src={hero} alt="dcd" class="w-32" />
+    <a href="#">
+    <Image src={logo} alt="bin" class="w-20" />
+    </a>
+  <Navbar>
