--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,4 +16,6 @@ import digitalcleanupday from '../assets/images/dcd.png';
 	</body>
 	<Button variant="primary" size="large">Primary button</Button>
 	<Button variant="secondary" size="large">Secondary button</Button>
+
+	<p>hej</p>
 </MainLayout>
