--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,4 +18,5 @@ import digitalcleanupday from '../assets/images/dcd.png';
 	<Button variant="secondary" size="large">Secondary button</Button>
 
 	<p>hej</p>
+	<p>hej laura</p>
 </MainLayout>
