--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,16 @@ import MainLayout from "../layouts/MainLayout.astro";
 import Button from '../components/Button.astro';
 import { Image } from 'astro:assets';
 import digitalcleanupday from '../assets/images/dcd.png'; 
+import Hero from '../components/Hero.astro';
 
 ---
-<body class="p-4 lg:px-16">
+<body class="">
 <MainLayout title="Digital Cleanup Day">
 	<article>
+		<section class="pt-52 lg:pt-32 lg:pb-32">
+			<Hero></Hero>
+		</section>
+
 		<section>
 			<Image src={digitalcleanupday} alt="dcd" class="h-80 w-80"></Image>
 			<h1 class="uppercase">Digital Cleanup Day 2024</h1>
@@ -17,6 +22,4 @@ import digitalcleanupday from '../assets/images/dcd.png';
 	<Button variant="primary" size="large">Primary button</Button>
 	<Button variant="secondary" size="large">Secondary button</Button>
 
-	<p>hej</p>
-	<p>hej laura</p>
 </MainLayout>
