--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,9 @@ import { Image } from "astro:assets";
 import Navbar from "../components/Navbar.astro";
 import logo from "../assets/images/logo.svg";
 ---
+<div class="grid grid-cols-2 bg-[#F3EFEA] py-10 lg:pr-12 lg:p-4 fixed w-full overflow-hidden">
     <a href="#">
-    <Image src={logo} alt="bin" class="w-20" />
+    <Image src={logo} alt="bin" class="w-32 mx-8 lg:mx-16" />
     </a>
-  <Navbar>
+    <Navbar>
+  </div>
