--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,33 +1,35 @@
 :root {
-    --primary-background-color:#D6D1BE;
-    --secondary-background-color:#F3EFEA;
-    --primary-text:#121212;
-    --secondary-text:#4A4A4A;
-    --xxlg-size: 3rem;
-    --xlg-size: 1.4rem;
-    --lg-size: 1.4rem;
-    --md-size: 1.25rem;
-    --sm-size: 1.06rem;
-   --border-width: 2px;
+  --primary-background-color: #d6d1be;
+  --secondary-background-color: #f3efea;
+  --primary-text: #121212;
+  --secondary-text: #4a4a4a;
+  --xxlg-size: 3rem;
+  --xlg-size: 1.4rem;
+  --lg-size: 1.4rem;
+  --md-size: 1.25rem;
+  --sm-size: 1.06rem;
+  --border-width: 2px;
 }
 
-body, main {
-    background-color: var(--primary-background-color);
+body,
+main {
+  background-color: var(--primary-background-color);
 }
 
-@font-face{
-    font-family: Governor;
-    src: url(Governor.ttf);
+@font-face {
+  font-family: Governor;
+  src: url(Governor.ttf);
 }
 
 h1 {
-    font-family: Governor;
-    font-size: 4rem;
-    line-height: 0.7;
+  font-family: Governor;
+  font-size: 4rem;
+  line-height: 0.7;
 }
 
-* {
-    line-height: 1.8;
-    font: Helvetica;
-    font-weight: lighter;
+p,
+h3 {
+  line-height: 1.8;
+  font: Helvetica;
+  font-weight: lighter;
 }
