--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -39,13 +39,13 @@
     x-on:click.outside="showmenu = false"
   >
     <ul>
-      <li class="text-center py-2 hover:font-bold">
+      <li class="text-center py-2 border-y-2 hover:font-bold">
         <a href="#">Hvad er digitalt affald?</a>
       </li>
-      <li class="text-center py-2  hover:font-bold">
+      <li class="text-center py-2 border-b-2 hover:font-bold">
         <a href="#">Problemet med digitalt affald</a>
       </li>
-      <li class="text-center py-2 hover:font-bold">
+      <li class="text-center py-2 border-b-2 hover:font-bold">
         <a href="#">Vidste du?</a>
       </li>
       <li class="text-center py-2 hover:font-bold">
@@ -54,7 +54,7 @@
       <li class="text-center py-2 hover:font-bold">
         <a href="#">Hvor meget har jeg slettet?</a>
       </li>
-      <li class="text-center py-2 hover:font-bold">
+      <li class="text-center py-2 border-b-2 hover:font-bold">
         <a href="#">Ryd op i mobil lagerplads</a>
       </li>
     </ul>
