--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 import digitalcleanupday from "../assets/images/dcd.png";
 ---
 
-<body class="p-4 lg:px-16">
+<body class="bg-[#F3EFEA]">
   <MainLayout title="Digital Cleanup Day">
     <article>
       <section>
@@ -23,11 +23,9 @@ import digitalcleanupday from "../assets/images/dcd.png";
   <!-- SEKTION 1 -->
   <section
     id="section_1"
-    class="bg-[#D6D1BE] outline max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2"
+    class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2"
   >
-    <div
-      class="p-4 flex items-center justify-center border border-black col-span-1 sm:order-1"
-    >
+    <div class="p-4 flex items-center justify-center col-span-1 sm:order-1">
       <img
         src="section_1.svg"
         alt="section_1-svg"
@@ -61,11 +59,10 @@ import digitalcleanupday from "../assets/images/dcd.png";
   <!-- SEKTION 2 -->
   <section
     id="section_1"
-    class="bg-[#D6D1BE] mt-20 outline max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2"
+    class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2"
   >
-    <div
-      class="p-4 flex flex-col justify-center border border-black col-span-1 sm:order-1"
-    >
+    <div class="p-4 flex flex-col justify-center
+       col-span-1 sm:order-1">
       <div>
         <h2 class="font-bold text-[#3C4A30]">
           Hvad er problemet med digitalt skrald?
@@ -98,42 +95,41 @@ import digitalcleanupday from "../assets/images/dcd.png";
   </section>
 
   <!-- SEKTION 4 -->
-  <section
-    id="section_4"
-    class="bg-[#D6D1BE] mt-20 p-4 outline max-w-7xl mx-auto"
-  >
-    <h2 class="font-bold text-[#7E2512] lg:px-16">
+  <div class="mt-20 max-full mx-auto grid grid-cols-1">
+    <h2 class="font-bold lg:px-60 text-[#7E2512] pl-4">
       Hvordan kan digitalt skrald fjernes?
     </h2>
-    <p class="py-10 prose text-[#7E2512] lg:px-16">
+    <p class="py-10 text-[#7E2512] lg:px-60 pl-4">
       Lad os begive os ud på et digitalt oprydningseventyr for at frigøre plads
-      på vores enheder! Her er hvordan vi kan tackle det digitale
-      affaldsproblem.
+      på vores enheder! <br /> Her er hvordan vi kan tackle det digitale affaldsproblem.
     </p>
+  </div>
+</body>
 
-    <div class="lg:pl-28 lg:grid lg:grid-cols-2 lg:grid-rows-3">
-      <!-- RÆKKE 1 -->
-      <div class="flex lg:block">
-        <div class="flex lg:w-4/5 gap-4">
-          <img
-            src="section_4.1.svg"
-            alt="Bin"
-            class="w-1/2 h-auto mb-4 lg:mb-0"
-          />
-          <p class="text-[#7E2512]">
-            <strong>Slet ubrugte applikationer</strong>
-            <br />
-            Sig farvel til de glemte apps, der samler virtuelt støv. Afinstaller
-            dem for at frigøre lagerplads og giv din enhed frisk luft.
-          </p>
-        </div>
+<section id="section_4" class="p-4 max-w-7xl mx-auto">
+  <div class="lg:pl-28 lg:grid lg:grid-cols-2 lg:grid-rows-3">
+    <!-- RÆKKE 1 -->
+    <div class="flex lg:block p-5">
+      <div class="flex lg:w-4/5 gap-4">
+        <img
+          src="section_4.1.svg"
+          alt="Bin"
+          class="w-1/2 h-auto mb-4 lg:mb-0"
+        />
+        <p class="text-[#7E2512]">
+          <strong>Slet ubrugte applikationer</strong>
+          <br />
+          Sig farvel til de glemte apps, der samler virtuelt støv. Afinstaller dem
+          for at frigøre lagerplads og giv din enhed frisk luft.
+        </p>
       </div>
-
-      <div class="lg:p-4 flex lg:w-4/5 gap-4">
+    </div>
+    <div class="flex lg:block p-5">
+      <div class="flex lg:w-4/5 gap-4">
         <img
           src="section_4.2.svg"
-          alt="Bin"
-          class="w-1/2 h-auto mb-4 lg:mb-0 pr-4"
+          alt="Search"
+          class="w-1/2 h-auto mb-4 lg:mb-0"
         />
         <p class="text-[#7E2512]">
           <strong>Opfrisk din browser</strong>
@@ -143,20 +139,94 @@ import digitalcleanupday from "../assets/images/dcd.png";
         </p>
       </div>
     </div>
-  </section>
+
+    <!-- RÆKKE 2 -->
+    <div class="flex lg:block p-5">
+      <div class="flex lg:w-4/5 gap-4">
+        <img
+          src="section_4.3.svg"
+          alt="Bin"
+          class="w-1/2 h-auto mb-4 lg:mb-0"
+        />
+        <p class="text-[#7E2512]">
+          <strong>Indbakke intervention</strong>
+          <br />
+          Tæm udyret, der er din e-mail-indbakke ved nådesløst at afmelde dig nyhedsbreve
+          og sortere gamle beskeder. Din indbakke vil føles lettere, og det vil din
+          ånd også!
+        </p>
+      </div>
+    </div>
+    <div class="flex lg:block p-5">
+      <div class="flex lg:w-4/5 gap-4">
+        <img
+          src="section_4.4.svg"
+          alt="Bin"
+          class="w-1/2 h-auto mb-4 lg:mb-0"
+        />
+        <p class="text-[#7E2512]">
+          <strong>Smid skraldet ud</strong>
+          <br />
+          Dyk ned i dine filer og ryd op i rodet. Sig farvel til duplikater, gamle
+          downloads og andre digitale relikvier, der tynger din enhed ned.
+        </p>
+      </div>
+    </div>
+
+    <!-- RÆKKE 3 -->
+    <div class="flex lg:block p-5">
+      <div class="flex lg:w-4/5 gap-4">
+        <img
+          src="section_4.5.svg"
+          alt="Bin"
+          class="w-1/2 h-auto mb-4 lg:mb-0"
+        />
+        <p class="text-[#7E2512]">
+          <strong>Magi med Cloud Storage</strong>
+          <br />
+          Transporter dine vigtige filer til skyen for sikker opbevaring og adgang
+          fra hvor som helst. Det er som at have et magisk loft til dine digitale
+          skatte!
+        </p>
+      </div>
+    </div>
+    <div class="flex lg:block p-5">
+      <div class="flex gap-4">
+        <img
+          src="section_4.6.svg"
+          alt="Bin"
+          class="w-1/2 h-auto mb-4 lg:mb-0"
+        />
+        <p class="text-[#7E2512]">
+          <strong>Udnyt indbyggede værktøjer</strong>
+          <br />
+          Udløs kraften fra indbyggede enhedsværktøjer designet til at optimere lagerplads
+          og bekæmpe digitalt affald. Udforsk dine enhedsindstillinger for skjulte
+          perler, der venter på at blive opdaget.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- GUL BOKS -->
+  <div class="bg-[#D1C56D] max-full mx-auto grid grid-cols-1">
+    <p class="p-10 text-center text-[#3C4A30] font-bold text-xl">
+      Med hver digital oprydningssession genopretter vi ikke kun lagerplads – vi
+      puster nyt liv i vores enheder, øger ydeevnen og forbedrer vores digitale
+      velbefindende. <br />
+      <br /> Lad os rulle ærmerne op og komme i gang med oprydningen!
+    </p>
+  </div>
 
   <!-- SEKTION 6 -->
-  <section
-    id="section_4"
-    class="bg-[#D6D1BE] mt-20 p-4 outline max-w-7xl mx-auto"
-  >
+  <section id="section_4" class="bg-[#D6D1BE] p-4 max-w-7xl mx-auto">
     <h1 class="mb-8 text-[#7E2512] text-center">
       Registrér din digitale oprydning
     </h1>
 
     <div class="grid grid-cols-1 md:grid-cols-2">
       <div class="p-4">
-        <img src="section_6.svg" alt="Cleaning" class="md:w-2/3" />
+        <img src="section_6.svg" alt="Cleaning" class="md:ml-48 md:w-2/3" />
       </div>
 
       <div>
@@ -207,7 +277,7 @@ import digitalcleanupday from "../assets/images/dcd.png";
 
           <div class="mb-4">
             <div
-              class="bg-[#F3EFEA] border-none border-2 px-3 rounded-full flex items-center justify-between"
+              class="bg-[#F3EFEA] border-none px-3 rounded-full flex items-center justify-between"
               style="border-color: #6B7280; border-width: 1px"
             >
               <label for="quantity" class="mr-3 text-[#6F7583]"
@@ -258,5 +328,5 @@ import digitalcleanupday from "../assets/images/dcd.png";
         </form>
       </div>
     </div>
-  </section></body
->
+  </section>
+</section>
