--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,15 @@
 ---
+
 ---
+
 <div>
-<p>Footer</p>
+  <div class="bg-[#D1C56D] max-full mx-auto grid grid-cols-1">
+    <p class="p-10 text-center text-[#3C4A30] font-bold text-xl">
+      Velkommen til Digital Cleanup Day! <br /> I den digitale verden er der masser
+      af affald. <br /><br />
+      <span class="font-light"
+        >Deltag i vores kamp mod digital forurening den <br/>
+        16. marts 2024!</span>
+    </p>
+  </div>
 </div>
-  
