--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -101,229 +101,230 @@ import digitalcleanupday from "../assets/images/dcd.png";
       </p>
     </div>
 
-  <section id="section_4" class="p-4 max-w-7xl mx-auto">
-    <div class="lg:pl-28 lg:grid lg:grid-cols-2 lg:grid-rows-3">
-      <!-- RÆKKE 1 -->
-      <div class="flex lg:block p-5">
-        <div class="flex lg:w-4/5 gap-4">
-          <img
-            src="section_4.1.svg"
-            alt="Bin"
-            class="w-1/2 h-auto mb-4 lg:mb-0"
-          />
-          <p class="text-[#7E2512]">
-            <strong>Slet ubrugte applikationer</strong>
-            <br />
-            Sig farvel til de glemte apps, der samler virtuelt støv. Afinstaller
-            dem for at frigøre lagerplads og giv din enhed frisk luft.
-          </p>
+    <section id="section_4" class="p-4 max-w-7xl mx-auto">
+      <div class="lg:pl-28 lg:grid lg:grid-cols-2 lg:grid-rows-3">
+        <!-- RÆKKE 1 -->
+        <div class="flex lg:block p-5">
+          <div class="flex lg:w-4/5 gap-4">
+            <img
+              src="section_4.1.svg"
+              alt="Bin"
+              class="w-1/2 h-auto mb-4 lg:mb-0"
+            />
+            <p class="text-[#7E2512]">
+              <strong>Slet ubrugte applikationer</strong>
+              <br />
+              Sig farvel til de glemte apps, der samler virtuelt støv. Afinstaller
+              dem for at frigøre lagerplads og giv din enhed frisk luft.
+            </p>
+          </div>
+        </div>
+        <div class="flex lg:block p-5">
+          <div class="flex lg:w-4/5 gap-4">
+            <img
+              src="section_4.2.svg"
+              alt="Search"
+              class="w-1/2 h-auto mb-4 lg:mb-0"
+            />
+            <p class="text-[#7E2512]">
+              <strong>Opfrisk din browser</strong>
+              <br />
+              Ryd op i din internethistorik og slet cache og cookies. Din browser
+              vil takke dig med hurtigere indlæsningstider og glattere surfing.
+            </p>
+          </div>
+        </div>
+
+        <!-- RÆKKE 2 -->
+        <div class="flex lg:block p-5">
+          <div class="flex lg:w-4/5 gap-4">
+            <img
+              src="section_4.3.svg"
+              alt="Bin"
+              class="w-1/2 h-auto mb-4 lg:mb-0"
+            />
+            <p class="text-[#7E2512]">
+              <strong>Indbakke intervention</strong>
+              <br />
+              Tæm udyret, der er din e-mail-indbakke ved nådesløst at afmelde dig
+              nyhedsbreve og sortere gamle beskeder. Din indbakke vil føles lettere,
+              og det vil din ånd også!
+            </p>
+          </div>
+        </div>
+        <div class="flex lg:block p-5">
+          <div class="flex lg:w-4/5 gap-4">
+            <img
+              src="section_4.4.svg"
+              alt="Bin"
+              class="w-1/2 h-auto mb-4 lg:mb-0"
+            />
+            <p class="text-[#7E2512]">
+              <strong>Smid skraldet ud</strong>
+              <br />
+              Dyk ned i dine filer og ryd op i rodet. Sig farvel til duplikater,
+              gamle downloads og andre digitale relikvier, der tynger din enhed ned.
+            </p>
+          </div>
+        </div>
+
+        <!-- RÆKKE 3 -->
+        <div class="flex lg:block p-5">
+          <div class="flex lg:w-4/5 gap-4">
+            <img
+              src="section_4.5.svg"
+              alt="Bin"
+              class="w-1/2 h-auto mb-4 lg:mb-0"
+            />
+            <p class="text-[#7E2512]">
+              <strong>Magi med Cloud Storage</strong>
+              <br />
+              Transporter dine vigtige filer til skyen for sikker opbevaring og adgang
+              fra hvor som helst. Det er som at have et magisk loft til dine digitale
+              skatte!
+            </p>
+          </div>
+        </div>
+        <div class="flex lg:block p-5">
+          <div class="flex gap-4">
+            <img
+              src="section_4.6.svg"
+              alt="Bin"
+              class="w-1/2 h-auto mb-4 lg:mb-0"
+            />
+            <p class="text-[#7E2512]">
+              <strong>Udnyt indbyggede værktøjer</strong>
+              <br />
+              Udløs kraften fra indbyggede enhedsværktøjer designet til at optimere
+              lagerplads og bekæmpe digitalt affald. Udforsk dine enhedsindstillinger
+              for skjulte perler, der venter på at blive opdaget.
+            </p>
+          </div>
         </div>
       </div>
-      <div class="flex lg:block p-5">
-        <div class="flex lg:w-4/5 gap-4">
-          <img
-            src="section_4.2.svg"
-            alt="Search"
-            class="w-1/2 h-auto mb-4 lg:mb-0"
-          />
-          <p class="text-[#7E2512]">
-            <strong>Opfrisk din browser</strong>
-            <br />
-            Ryd op i din internethistorik og slet cache og cookies. Din browser vil
-            takke dig med hurtigere indlæsningstider og glattere surfing.
-          </p>
-        </div>
+
+      <!-- GUL BOKS -->
+      <div class="bg-[#D1C56D] max-full mx-auto grid grid-cols-1">
+        <p class="p-10 text-center text-[#3C4A30] font-light text-xl">
+          Med hver digital oprydningssession genopretter vi ikke kun lagerplads <br
+          /> – vi puster nyt liv i vores enheder, øger ydeevnen og forbedrer vores
+          digitale velbefindende. <br />
+          <br /> Lad os rulle ærmerne op og komme i gang med oprydningen!
+        </p>
       </div>
 
-      <!-- RÆKKE 2 -->
-      <div class="flex lg:block p-5">
-        <div class="flex lg:w-4/5 gap-4">
-          <img
-            src="section_4.3.svg"
-            alt="Bin"
-            class="w-1/2 h-auto mb-4 lg:mb-0"
-          />
-          <p class="text-[#7E2512]">
-            <strong>Indbakke intervention</strong>
-            <br />
-            Tæm udyret, der er din e-mail-indbakke ved nådesløst at afmelde dig nyhedsbreve
-            og sortere gamle beskeder. Din indbakke vil føles lettere, og det vil
-            din ånd også!
-          </p>
-        </div>
-      </div>
-      <div class="flex lg:block p-5">
-        <div class="flex lg:w-4/5 gap-4">
-          <img
-            src="section_4.4.svg"
-            alt="Bin"
-            class="w-1/2 h-auto mb-4 lg:mb-0"
-          />
-          <p class="text-[#7E2512]">
-            <strong>Smid skraldet ud</strong>
-            <br />
-            Dyk ned i dine filer og ryd op i rodet. Sig farvel til duplikater, gamle
-            downloads og andre digitale relikvier, der tynger din enhed ned.
-          </p>
-        </div>
-      </div>
+      <!-- SEKTION 6 -->
+      <section id="section_4" class="bg-[#D6D1BE] p-4 max-w-7xl mx-auto">
+        <h1 class="mb-8 text-[#7E2512] text-center">
+          Registrér din digitale oprydning
+        </h1>
 
-      <!-- RÆKKE 3 -->
-      <div class="flex lg:block p-5">
-        <div class="flex lg:w-4/5 gap-4">
-          <img
-            src="section_4.5.svg"
-            alt="Bin"
-            class="w-1/2 h-auto mb-4 lg:mb-0"
-          />
-          <p class="text-[#7E2512]">
-            <strong>Magi med Cloud Storage</strong>
-            <br />
-            Transporter dine vigtige filer til skyen for sikker opbevaring og adgang
-            fra hvor som helst. Det er som at have et magisk loft til dine digitale
-            skatte!
-          </p>
-        </div>
-      </div>
-      <div class="flex lg:block p-5">
-        <div class="flex gap-4">
-          <img
-            src="section_4.6.svg"
-            alt="Bin"
-            class="w-1/2 h-auto mb-4 lg:mb-0"
-          />
-          <p class="text-[#7E2512]">
-            <strong>Udnyt indbyggede værktøjer</strong>
-            <br />
-            Udløs kraften fra indbyggede enhedsværktøjer designet til at optimere
-            lagerplads og bekæmpe digitalt affald. Udforsk dine enhedsindstillinger
-            for skjulte perler, der venter på at blive opdaget.
-          </p>
-        </div>
-      </div>
-    </div>
+        <div class="grid grid-cols-1 md:grid-cols-2">
+          <div class="p-4">
+            <img src="section_6.svg" alt="Cleaning" class="md:ml-48 md:w-2/3" />
+          </div>
 
-    <!-- GUL BOKS -->
-    <div class="bg-[#D1C56D] max-full mx-auto grid grid-cols-1">
-      <p class="p-10 text-center text-[#3C4A30] font-bold text-xl">
-        Med hver digital oprydningssession genopretter vi ikke kun lagerplads –
-        vi puster nyt liv i vores enheder, øger ydeevnen og forbedrer vores
-        digitale velbefindende. <br />
-        <br /> Lad os rulle ærmerne op og komme i gang med oprydningen!
-      </p>
-    </div>
-
-    <!-- SEKTION 6 -->
-    <section id="section_4" class="bg-[#D6D1BE] p-4 max-w-7xl mx-auto">
-      <h1 class="mb-8 text-[#7E2512] text-center">
-        Registrér din digitale oprydning
-      </h1>
-
-      <div class="grid grid-cols-1 md:grid-cols-2">
-        <div class="p-4">
-          <img src="section_6.svg" alt="Cleaning" class="md:ml-48 md:w-2/3" />
-        </div>
-
-        <div>
-          <form class="max-w-4xl w-full md:w-3/4 mx-auto px-4">
-            <div class="mb-4 mt-4">
-              <label for="surname" class="block"></label>
-              <input
-                type="text"
-                id="surname"
-                name="surname"
-                placeholder="Fornavn*"
-                class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300"
-              />
-            </div>
-
-            <div class="mb-4 mt-4">
-              <label for="lastname" class="block"></label>
-              <input
-                type="text"
-                id="lastname"
-                name="lastname"
-                placeholder="Efternavn*"
-                class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300"
-              />
-            </div>
-
-            <div class="mb-4">
-              <label for="email" class="block"></label>
-              <input
-                type="text"
-                id="email"
-                name="email"
-                placeholder="E-mail adresse*"
-                class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300"
-              />
-            </div>
-
-            <div class="mb-4">
-              <label for="organisation" class="block"></label>
-              <input
-                type="text"
-                id="organisation"
-                name="organisation"
-                placeholder="Virksomhed (valgfrit)"
-                class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300"
-              />
-            </div>
-
-            <div class="mb-4">
-              <div
-                class="bg-[#F3EFEA] border-none px-3 rounded-full flex items-center justify-between"
-                style="border-color: #6B7280; border-width: 1px"
-              >
-                <label for="quantity" class="mr-3 text-[#6F7583]"
-                  >Antal deltagere*</label
-                >
+          <div>
+            <form class="max-w-4xl w-full md:w-3/4 mx-auto px-4">
+              <div class="mb-4 mt-4">
+                <label for="surname" class="block"></label>
                 <input
-                  type="number"
-                  id="quantity"
-                  class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-[#6F7583] text-right"
-                  value="0"
-                  min="0"
+                  type="text"
+                  id="surname"
+                  name="surname"
+                  placeholder="Fornavn*"
+                  class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300"
                 />
               </div>
-            </div>
 
-            <div class="mb-4">
-              <div
-                class="bg-[#F3EFEA] border-none border-2 px-3 rounded-full flex items-center justify-between"
-                style="border-color: #6B7280; border-width: 1px"
-              >
-                <label for="quantity" class="mr-3 text-[#6F7583]"
-                  >Slettet GB*</label
-                >
+              <div class="mb-4 mt-4">
+                <label for="lastname" class="block"></label>
                 <input
-                  type="number"
-                  id="quantity"
-                  class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-[#6F7583] text-right border-"
-                  value="0"
-                  min="0"
+                  type="text"
+                  id="lastname"
+                  name="lastname"
+                  placeholder="Efternavn*"
+                  class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300"
                 />
               </div>
-            </div>
 
-            <div class="pt-4">
-              <input type="checkbox" class="rounded border-[#F3EFEA]" />
-              <label>Jeg accepterer vilkårene</label>
-              <div class="my-5">
+              <div class="mb-4">
+                <label for="email" class="block"></label>
+                <input
+                  type="text"
+                  id="email"
+                  name="email"
+                  placeholder="E-mail adresse*"
+                  class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300"
+                />
+              </div>
+
+              <div class="mb-4">
+                <label for="organisation" class="block"></label>
+                <input
+                  type="text"
+                  id="organisation"
+                  name="organisation"
+                  placeholder="Virksomhed (valgfrit)"
+                  class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300"
+                />
+              </div>
+
+              <div class="mb-4">
+                <div
+                  class="bg-[#F3EFEA] border-none px-7 rounded-full flex items-center justify-between"
+                  style="border-color: #6B7280; border-width: 1px"
+                >
+                  <label for="quantity" class="mr-3 text-[#6F7583]"
+                    >Antal deltagere*</label
+                  >
+                  <input
+                    type="number"
+                    id="quantity"
+                    class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-[#6F7583]"
+                    value="0"
+                    min="0"
+                  />
+                </div>
+              </div>
+
+              <div class="mb-4">
+                <div
+                  class="bg-[#F3EFEA] border-none border-2 px-7 rounded-full flex items-center justify-between"
+                  style="border-color: #6B7280; border-width: 1px"
+                >
+                  <label for="quantity" class="mr-3 text-[#6F7583]"
+                    >Slettet GB*</label
+                  >
+                  <input
+                    type="number"
+                    id="quantity"
+                    class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-[#6F7583]"
+                    value="0"
+                    min="0"
+                  />
+                </div>
+              </div>
+
+              <div class="pt-4">
                 <input type="checkbox" class="rounded border-[#F3EFEA]" />
-                <label
-                  >Jeg ønsker at tilmelde mig nyhedsbrevet fra World Cleanup Day</label
-                >
-              </div>
+                <label>Jeg accepterer vilkårene</label>
+                <div class="my-5">
+                  <input type="checkbox" class="rounded border-[#F3EFEA]" />
+                  <label
+                    >Jeg ønsker at tilmelde mig nyhedsbrevet fra World Cleanup
+                    Day</label
+                  >
+                </div>
 
-              <div class="mb-5">
-                <Button variant="primary" size="large">Indsend</Button>
+                <div class="mb-5">
+                  <Button variant="primary" size="large">Indsend</Button>
+                </div>
               </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
-      </div>
+      </section>
     </section>
-  </section>
+  </MainLayout>
 </body>
-</MainLayout>
