--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,6 @@
   --border-width: 2px;
 }
 
-<<<<<<< HEAD
 body,
 main {
   background-color: var(--primary-background-color);
@@ -39,19 +38,19 @@ h3 {
   font: Helvetica;
   font-weight: lighter;
 }
-=======
-@font-face{
-    font-family: Maver;
-    src: url(Maver.ttf);
+
+@font-face {
+  font-family: Maver;
+  src: url(Maver.ttf);
 }
 
-h1 , h2 {
-    font-family: Maver;
-    font-size: var( --xxlg-size);
-    line-height: 0.9;
+h1,
+h2 {
+  font-family: Maver;
+  font-size: var(--xxlg-size);
+  line-height: 0.9;
 }
 
 * {
-    font: Helvetica;
+  font: Helvetica;
 }
->>>>>>> Ida
