--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,24 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
-import Button from '../components/Button.astro';
+import Hero from '../components/Hero.astro';
+import Sektion3 from '../components/Sektion3.astro'
+import Sektion5 from '../components/Sektion5.astro'
 import { Image } from 'astro:assets';
-import digitalcleanupday from '../assets/images/dcd.png'; 
-
+import kost from '../assets/images/kost.svg'; 
 ---
-<body class="p-4 lg:px-16">
+<body class="">
 <MainLayout title="Digital Cleanup Day">
 	<article>
-		<section>
-			<Image src={digitalcleanupday} alt="dcd" class="h-80 w-80"></Image>
-			<h1 class="uppercase">Digital Cleanup Day 2024</h1>
+		<section class="pt-52 lg:pt-32 lg:pb-32">
+			<Hero></Hero>
 		</section>
-	</article>
-	</body>
-	<Button variant="primary" size="large">Primary button</Button>
-	<Button variant="secondary" size="large">Secondary button</Button>
 
-	<p>hej</p>
-	<p>hej laura</p>
+		<section class="w-full">
+			<Sektion3></Sektion3>
+		</section>
+
+		<section class="w-full">
+			<Sektion5></Sektion5>
+		</section>
+
 </MainLayout>
