--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -10,7 +10,7 @@ const buttonStyling = "text-black ";
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskelligeog størrelser.
 const variantClasses = {
   primary:
-    "bg-yellow-50 text-lime-900 hover:text-yellow-50 hover:bg-lime-900 px-3 py-2 rounded-lg transition duration-100 ease-in-out ",
+    "bg-[#3C4A30] text-yellow-50 hover:bg-yellow-50 hover:text-[#3C4A30] px-3 py-2 rounded-lg transition duration-100 ease-in-out ",
 
   secondary:
     "bg-red-900 text-yellow-50 hover:text-red-900 hover:bg-yellow-50 px-3 py-2 rounded-lg transition duration-100 ease-in-out ",
