--- a/src/components/Sektion3.astro
+++ b/src/components/Sektion3.astro
@@ -10,8 +10,8 @@ import mail from '../assets/images/mail.svg';
 import elkædel from '../assets/images/elkædel.svg';
 ---
 
-<div class="bg-[D6D1BE] lg:pb-14">
-    <h2 class="text-[#7E2512] text-center lg:text-4xl lg:pb-10">Vidste du..?</h2>
+<div class="bg-[D6D1BE] lg:pb-14 lg:pt-28 pt-14">
+    <h2 class="text-[#7E2512] text-center lg:pb-10 text-3xl lg:text-5xl">Vidste du..?</h2>
 
 <div class="grid grid-cols-2 px-10 pt-10 gap-6 text-[#7E2512] font-bold lg:grid-cols-4 lg:px-20 lg:gap-20 lg:pr-0">
     <div class="pb-8 text-sm lg:pb-4 lg:text-base">
