--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import logo from "../assets/images/logo.svg";
 ---
 <div class="grid grid-cols-2 bg-[#F3EFEA] py-10 lg:pr-12 lg:p-4 fixed w-full overflow-hidden">
     <a href="#">
-    <Image src={logo} alt="bin" class="w-32 mx-8 lg:mx-16" />
+    <Image src={logo} alt="bin" class="w-34 lg:w-1/4 mx-8 lg:mx-16" />
     </a>
     <Navbar>
   </div>
