--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,12 +3,12 @@ import Button from '../components/Button.astro';
 ---
 
 <div>
-    <h3 class="text-[#3C4A30] text-center pt-8 text-xl font-light lg:pt-10">Sortere du dit digitale skrald?</h3>
+    <h3 class="text-[#3C4A30] text-center pt-8 text-xl font-light lg:pt-10">Sorterer du dit digitale skrald?</h3>
 <h1 class="text-[#3C4A30] text-center pt-10 text-5xl lg:text-7xl">Digital skraldedag</h1>
 <h3 class="text-[#3C4A30] text-2xl font-semibold text-center pt-5 pb-4 lg:pt-10 lg:pb-5">Deltag d. 14.03.2024</h3>
 
 </div>
 
 <div class="flex justify-center lg:pb-0 pb-20">
-<Button variant="secondary" size="large">Tilmeld</Button>
+<a href="#sektion6"><Button variant="secondary" size="large">Tilmeld</Button></a>
 </div>
