--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,25 +6,25 @@ import Button from "../components/Button.astro";
   <div id="navbar" class="flex flex-row justify-between ">
       <nav id="desktopmenu" class="hidden lg:block">
           <ul class="flex flex-row gap-6 lg:pr-26 lg:pt-4">
-              <li class="text-red-900 hover:text-lime-900 hover:underline decoration-solid"><a href="#link1">Digitalt affald?</a></li>
-              <li class="text-red-900 hover:text-lime-900 hover:underline decoration-solid"><a href="#link2">Om problemet</a></li>
-              <li class="text-red-900 hover:text-lime-900 hover:underline decoration-solid"><a href="#link3">Vidste du?</a></li>
-              <li class="text-red-900 hover:text-lime-900 hover:underline decoration-solid"><a href="#link4">Hvordan gør jeg?</a></li>
-              <li class="text-red-900 hover:text-lime-900 hover:underline decoration-solid"><a href="#link5">Hvor meget?</a></li>
-              <Button variant="secondary" size="small">Tilmeld</Button>
+              <li class="text-red-900 hover:text-lime-900 hover:underline decoration-solid"><a href="#sektion1">Digitalt affald?</a></li>
+              <li class="text-red-900 hover:text-lime-900 hover:underline decoration-solid"><a href="#sektion2">Om problemet</a></li>
+              <li class="text-red-900 hover:text-lime-900 hover:underline decoration-solid"><a href="#sektion3">Vidste du?</a></li>
+              <li class="text-red-900 hover:text-lime-900 hover:underline decoration-solid"><a href="#sektion4">Hvordan gør jeg?</a></li>
+              <li class="text-red-900 hover:text-lime-900 hover:underline decoration-solid"><a href="#sektion5">Hvor meget?</a></li>
+             <a href="#sektion6"> <Button variant="secondary" size="small">Tilmeld</Button></a>
           </ul>
       </nav>
-      <button id="burgermenu" class="lg:hidden pr-4 mx-24 pt-4 text-red-900 font-semibold" x-on:click="showmenu = ! showmenu">Menu</button>
+      <button id="burgermenu" class="lg:hidden pr-4 mx-24 pt-10 text-red-900 font-semibold" x-on:click="showmenu = ! showmenu">Menu</button>
   </div>
-  <nav id="mobilmenu" class="flex flex-col pt-4" 
+  <nav id="mobilmenu" class="flex flex-col pt-5" 
   x-show="showmenu" x-transition x-on:click="showmenu = false" x-on:click.outside="showmenu = false">
       <ul class= "font-light">
-          <li class="text-red-900 text-center py-4 "><a href="#link1">Digitalt affald?</a></li>
-          <li class="text-red-900 text-center py-4 "><a href="#link2">Om problemet</a></li>
-          <li class="text-red-900 text-center py-4 "><a href="#link3">Vidste du?</a></li>
-          <li class="text-red-900 text-center py-4 "><a href="#link4">Hvordan gør jeg?</a></li>
-          <li class="text-red-900 text-center py-4 "><a href="#link4">Hvor meget?</a></li>
-          <Button class="px-10" variant="secondary" size="small">Tilmeld</Button>
+          <li class="text-red-900 text-center py-4 "><a href="#sektion1">Digitalt affald?</a></li>
+          <li class="text-red-900 text-center py-4 "><a href="#sektion2">Om problemet</a></li>
+          <li class="text-red-900 text-center py-4 "><a href="#sektion3">Vidste du?</a></li>
+          <li class="text-red-900 text-center py-4 "><a href="#sektion4">Hvordan gør jeg?</a></li>
+          <li class="text-red-900 text-center py-4 "><a href="#sektion5">Hvor meget?</a></li>
+         <a href="#sektion6"> <div class="flex justify-end pr-14 py-4"> <Button class="px-10" variant="secondary" size="small">Tilmeld</Button> </div></a>
       </ul>
   </nav>
 </div>
