--- a/src/components/Sektion5.astro
+++ b/src/components/Sektion5.astro
@@ -1,8 +1,8 @@
 ---
 
 ---
-<div class="bg-[#F3EFEA] lg:pb-14 p-8 lg:px-20">
-<h2 class="text-[#7E2512] text-center lg:text-4xl lg:pb-10 lg:pt-14">Ryd op I mobil lagerplads</h2>
+<div class="lg:pb-14 p-8 lg:px-20">
+<h2 class="text-[#7E2512] text-center lg:pb-10 lg:pt-14 text-3xl lg:text-5xl">Ryd op I mobil lagerplads</h2>
 
 <div class="grid lg:grid-cols-3 gap-2 lg:gap-20">
 
