--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
 			<slot />
 		</main>
 
-		<footer>
+		<footer class="-mt-4">
 			<Footer></Footer>
 		</footer>
 			
