--- a/src/components/Sektion3.astro
+++ b/src/components/Sektion3.astro
@@ -10,10 +10,10 @@ import mail from '../assets/images/mail.svg';
 import elkædel from '../assets/images/elkædel.svg';
 ---
 
-<div class="bg-[D6D1BE] lg:pb-14 lg:pt-28 pt-14">
+<div class="bg-[D6D1BE] lg:pb-14 lg:pt-28 pt-14 mx-10">
     <h2 class="text-[#7E2512] text-center lg:pb-10 text-3xl lg:text-5xl">Vidste du..?</h2>
 
-<div class="grid grid-cols-2 px-10 pt-10 gap-6 text-[#7E2512] font-bold lg:grid-cols-4 lg:px-20 lg:gap-20 lg:pr-0">
+<div class="grid grid-cols-2 pt-10 gap-6 text-[#7E2512] font-bold lg:grid-cols-4 lg:px-20 lg:gap-20 lg:pr-0">
     <div class="pb-8 text-sm lg:pb-4 lg:text-base">
         <Image src={melon} alt="melon" class="h-32 w-32 lg:h-40 lg:w-40"></Image>
         <p class="pt-4 pr-4 lg:pr-20">15 timers video-møder udsender 9,4 kg CO₂ om måneden – det svarer til størrelsen af en stor vandmelon!</p>
