--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Button from "../components/Button.astro";
 ---
 
 <body>
-<MainLayout title="Digital Cleanup Day">
+<MainLayout title="Digital skraldedag">
 	<article>
 
 		 <!-- Hero unit -->
@@ -16,7 +16,7 @@ import Button from "../components/Button.astro";
 		</section>
 
     <!-- SEKTION 1 -->
-   <a href=sektion1> <section id="sektion1" class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 lg:pt-14 lg:pb-20">
+   <a href=sektion1> <section id="sektion1" class="lg:mx-20 mx-5 grid grid-cols-1 sm:grid-cols-2 lg:pt-14 lg:pb-20">
 
       <div class="p-4 flex items-center justify-center col-span-1 sm:order-1">
         <img
@@ -53,7 +53,7 @@ import Button from "../components/Button.astro";
     <!-- SEKTION 2 -->
     <a href=sektion2> <section
       id="sektion2"
-      class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2"
+      class="lg:mx-20 mx-5 grid grid-cols-1 sm:grid-cols-2"
     >
       <div class="p-4 flex flex-col justify-center
        col-span-1 sm:order-1">
@@ -96,26 +96,26 @@ import Button from "../components/Button.astro";
     <!-- SEKTION 4 -->
     <a href=sektion4> <section id="sektion4">
 		
-		<div class="mt-20 max-full mx-auto grid grid-cols-1">
-      <h2 class="lg:px-60 text-[#7E2512] pl-4 text-3xl text-center lg:text-5xl">
+		<div class="mt-20 mx-20 grid grid-cols-1">
+      <h2 class="text-[#7E2512] text-3xl text-center lg:text-5xl">
         Hvordan kan digitalt skrald fjernes?
       </h2>
-      <p class="py-10 text-[#7E2512] lg:px-60 pl-4 lg:text-center">
+      <p class="py-10 text-[#7E2512] lg:text-center">
         Lad os begive os ud på et digitalt oprydningseventyr for at frigøre
         plads på vores enheder! <br /> Her er hvordan vi kan tackle det digitale
         affaldsproblem.
       </p>
     </div>
 
-    <section id="section_4" class="p-4 max-w-7xl mx-auto">
-      <div class="lg:pl-28 lg:grid lg:grid-cols-2 lg:grid-rows-3 lg:pb-14">
+    <section id="section_4" class="p-4 lg:mx-20 mx-5">
+      <div class="lg:grid lg:grid-cols-2 lg:grid-rows-3 lg:pb-14">
         <!-- RÆKKE 1 -->
-        <div class="flex lg:block p-5">
-          <div class="flex lg:w-2/3 gap-4">
+        <div class="flex lg:block py-5 lg:pr-20">
+          <div class="flex gap-4">
             <img
               src="section_4.1.svg"
               alt="Bin"
-              class="w-1/2 h-auto mb-4 lg:mb-0"
+              class="w-10 lg:w-20 h-auto mb-4 lg:mb-0"
             />
             <p class="text-[#7E2512]">
               <strong>Slet ubrugte applikationer</strong>
@@ -125,12 +125,12 @@ import Button from "../components/Button.astro";
             </p>
           </div>
         </div>
-        <div class="flex lg:block p-5">
-          <div class="flex lg:w-4/5 gap-4">
+        <div class="flex lg:block py-5">
+          <div class="flex lg:gap-4">
             <img
               src="section_4.2.svg"
               alt="Search"
-              class="w-1/2 h-auto mb-4 lg:mb-0"
+              class="w-14 pr-3 lg:pr-0 lg:w-1/2 h-auto mb-4 lg:mb-0 lg:mx-6"
             />
             <p class="text-[#7E2512]">
               <strong>Opfrisk din browser</strong>
@@ -142,12 +142,12 @@ import Button from "../components/Button.astro";
         </div>
 
         <!-- RÆKKE 2 -->
-        <div class="flex lg:block p-5">
-          <div class="flex lg:w-4/5 gap-4">
+        <div class="flex lg:block py-5 lg:pr-20">
+          <div class="flex gap-4">
             <img
               src="section_4.3.svg"
               alt="Bin"
-              class="w-1/2 h-auto mb-4 lg:mb-0"
+              class="w-10 lg:w-28 h-auto mb-4 lg:mb-0"
             />
             <p class="text-[#7E2512]">
               <strong>Indbakke intervention</strong>
@@ -158,12 +158,12 @@ import Button from "../components/Button.astro";
             </p>
           </div>
         </div>
-        <div class="flex lg:block p-5">
-          <div class="flex lg:w-4/5 gap-4">
+        <div class="flex lg:block py-5">
+          <div class="flex lg:gap-4">
             <img
               src="section_4.4.svg"
               alt="Bin"
-              class="w-1/2 h-auto mb-4 lg:mb-0"
+              class="w-14 pr-3 lg:pr-0 lg:w-1/2 h-auto mb-4 lg:mb-0 lg:mx-6"
             />
             <p class="text-[#7E2512]">
               <strong>Smid skraldet ud</strong>
@@ -175,12 +175,12 @@ import Button from "../components/Button.astro";
         </div>
 
         <!-- RÆKKE 3 -->
-        <div class="flex lg:block p-5 ">
-          <div class="flex lg:w-4/6  gap-4">
+        <div class="flex lg:block py-5 lg:pr-20">
+          <div class="flex lg:gap-4">
             <img
               src="section_4.5.svg"
               alt="Bin"
-              class="w-2/3 h-auto mb-4 lg:mb-0"
+              class="w-14 pr-3 lg:pr-0 lg:w-32 h-auto mb-4 lg:mb-0"
             />
             <p class="text-[#7E2512]">
               <strong>Magi med Cloud Storage</strong>
@@ -191,12 +191,12 @@ import Button from "../components/Button.astro";
             </p>
           </div>
         </div>
-        <div class="flex lg:block p-5">
-          <div class="flex gap-4">
+        <div class="flex lg:block py-5">
+          <div class="flex lg:gap-4">
             <img
               src="section_4.6.svg"
               alt="Bin"
-              class="lg:w-16 w-10 h-auto mb-4 lg:mb-0"
+              class="w-10 mx-2 lg:w-20 h-auto mb-4 lg:mb-0 lg:mx-10"
             />
             <p class="text-[#7E2512]">
               <strong>Udnyt indbyggede værktøjer</strong>
@@ -237,7 +237,7 @@ import Button from "../components/Button.astro";
           </div>
 
           <div>
-            <form class="max-w-4xl w-full md:w-3/4 mx-auto px-4">
+            <form class="lg:mx-20 mx-5  md:w-3/4 px-4">
               <div class="mb-4 mt-4">
                 <label for="surname" class="block"></label>
                 <input
@@ -245,7 +245,7 @@ import Button from "../components/Button.astro";
                   id="surname"
                   name="surname"
                   placeholder="Fornavn*"
-                  class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
+                  class="rounded-full bg-[#F3EFEA] p-3 px-7 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -256,7 +256,7 @@ import Button from "../components/Button.astro";
                   id="lastname"
                   name="lastname"
                   placeholder="Efternavn*"
-                  class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
+                  class="rounded-full bg-[#F3EFEA] p-3 px-7 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -267,7 +267,7 @@ import Button from "../components/Button.astro";
                   id="email"
                   name="email"
                   placeholder="E-mail adresse*"
-                  class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
+                  class="rounded-full bg-[#F3EFEA] p-3 px-7 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -278,7 +278,7 @@ import Button from "../components/Button.astro";
                   id="organisation"
                   name="organisation"
                   placeholder="Virksomhed (valgfrit)"
-                  class="rounded-full bg-[#F3EFEA] p-3 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
+                  class="rounded-full bg-[#F3EFEA] p-3 px-7 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
