--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
 <div>
   <div class="bg-[#D1C56D] max-full mx-auto grid grid-cols-1">
     <p class="p-10 text-center text-[#3C4A30] font-bold text-xl">
-      Velkommen til Digital Cleanup Day! <br /> I den digitale verden er der masser
+      Velkommen til Digital Skraldedag! <br /> I den digitale verden er der masser
       af affald. <br /><br />
       <span class="font-light"
         >Deltag i vores kamp mod digital forurening den <br/>
