--- a/src/components/Sektion3.astro
+++ b/src/components/Sektion3.astro
@@ -42,8 +42,7 @@ import elkædel from '../assets/images/elkædel.svg';
 
     <div class="pb-8 text-sm pl-5 lg:pb-4 lg:text-base lg:pl-0">
         <Image src={Volkswagen} alt="Volkswagen" class="h-32 w-32 lg:h-40 lg:w-40"></Image>
-        <p class="pt-4 lg:pr-20">Google bruger 15.616MWh/dag – det er mere end dansk havvindmølle.
-            Det er nok til at forsyne 1 million indbyggere i en dag. </p>
+        <p class="pt-4 lg:pr-20">Internetforbrug, hovedsageligt fossilt brændstofdrevet, udsender over 870 mio. tons CO₂, svarende til 783 mia. Volkswagen-biler. </p>
     </div>
 
     <div class="pb-8 text-sm lg:pb-4 lg:text-base">
